--- a/src/components/ThemeName/ThemeName.stories.mdx
+++ b/src/components/ThemeName/ThemeName.stories.mdx
@@ -1,11 +1,11 @@
-import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, ArgsTable } from '@storybook/addon-docs/blocks';
 import ThemeName, { ThemeNameType } from './ThemeName';
 
 <Meta
   title="Theme/ThemeName"
   component={ThemeName}
   argTypes={{
-    themeName: {
+    name: {
       description: 'Determines what theme should be applied to the application.',
       options: [
         'dark',
@@ -23,6 +23,6 @@ import ThemeName, { ThemeNameType } from './ThemeName';
 
 <ArgsTable of={ThemeName} />
 
-<Canvas>
-    <ThemeName themeName={ 'dark' } />
-</Canvas>
+<Story name="Demo">
+  <ThemeName name={ 'dark' } />
+</Story>
